[package]
name = "wld-multiplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
fastly = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["serde"] }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
